SERVER-67687: Fix PosixTimer::onThreadDetach to accumulate elapsed time